package org.project.domain;

public class ClientException extends Exception {
    public ClientException(String message) {
        super(message);
    }
}
